# cellsim-2

./: CMakeLists.txt  README.md
notes/: reaction_lang.txt
src/: atom.cpp  atom.h  bin.h  defs.h  main.cpp  simulation.cpp  simulation.h  window.cpp  window.h
src/util/: weakset.h
